--- a/index.html
+++ b/index.html
@@ -117,22 +117,22 @@
             <p>Christopher Walker</p>
             <span>Product Designer</span>
             <div class="photo-cards-socials">
-              <div>
+              <div class="photo-cards-socials-hover">
                 <svg>
                   <use href="./images/symbol-defs.svg#icon-instagram"/>
                 </svg>
               </div>
-              <div>
+              <div class="photo-cards-socials-hover">
                 <svg>
                   <use href="./images/symbol-defs.svg#icon-twitter"/>
                 </svg>
               </div>
-              <div>
+              <div class="photo-cards-socials-hover">
                 <svg>
                   <use href="./images/symbol-defs.svg#icon-facebook"/>
                 </svg>
               </div>
-              <div>
+              <div class="photo-cards-socials-hover">
                 <svg>
                   <use href="./images/symbol-defs.svg#icon-linkedin"/>
                 </svg>
@@ -144,22 +144,22 @@
             <p>Kylie Evans</p>
             <span>Frontend Developer</span>
             <div class="photo-cards-socials">
-              <div>
+              <div class="photo-cards-socials-hover">
                 <svg>
                   <use href="./images/symbol-defs.svg#icon-instagram"/>
                 </svg>
               </div>
-              <div>
+              <div class="photo-cards-socials-hover">
                 <svg>
                   <use href="./images/symbol-defs.svg#icon-twitter"/>
                 </svg>
               </div>
-              <div>
+              <div class="photo-cards-socials-hover">
                 <svg>
                   <use href="./images/symbol-defs.svg#icon-facebook"/>
                 </svg>
               </div>
-              <div>
+              <div class="photo-cards-socials-hover">
                 <svg>
                   <use href="./images/symbol-defs.svg#icon-linkedin"/>
                 </svg>
@@ -171,22 +171,22 @@
             <p>Ryan Harris</p>
             <span>Marketing</span>
             <div class="photo-cards-socials">
-              <div>
+              <div class="photo-cards-socials-hover">
                 <svg>
                   <use href="./images/symbol-defs.svg#icon-instagram"/>
                 </svg>
               </div>
-              <div>
+              <div class="photo-cards-socials-hover">
                 <svg>
                   <use href="./images/symbol-defs.svg#icon-twitter"/>
                 </svg>
               </div>
-              <div>
+              <div class="photo-cards-socials-hover">
                 <svg>
                   <use href="./images/symbol-defs.svg#icon-facebook"/>
                 </svg>
               </div>
-              <div>
+              <div class="photo-cards-socials-hover">
                 <svg>
                   <use href="./images/symbol-defs.svg#icon-linkedin"/>
                 </svg>
@@ -198,22 +198,22 @@
             <p>Tyler Moore</p>
             <span>UI Designer</span>
             <div class="photo-cards-socials">
-              <div>
+              <div class="photo-cards-socials-hover">
                 <svg>
                   <use href="./images/symbol-defs.svg#icon-instagram"/>
                 </svg>
               </div>
-              <div>
+              <div class="photo-cards-socials-hover"> 
                 <svg>
                   <use href="./images/symbol-defs.svg#icon-twitter"/>
                 </svg>
               </div>
-              <div>
+              <div class="photo-cards-socials-hover">
                 <svg>
                   <use href="./images/symbol-defs.svg#icon-facebook"/>
                 </svg>
-              </div>
-              <div>
+              </div >
+              <div class="photo-cards-socials-hover">
                 <svg>
                   <use href="./images/symbol-defs.svg#icon-linkedin"/>
                 </svg>
